data/derived/sp14/progs/unify/prog3758.ml.out
Characters 139-144:
  let tens = (x1 + x2 + carry) / 10 in
                        ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
